--- a/usr/src/cmd/rpcsvc/nis/rpc.nisd/configs/Makefile
+++ b/usr/src/cmd/rpcsvc/nis/rpc.nisd/configs/Makefile
@@ -19,43 +19,28 @@
 #
 # CDDL HEADER END
 #
-#pragma ident	"%Z%%M%	%I%	%E% SMI"
+# ident	"%Z%%M%	%I%	%E% SMI"
 #
-# Copyright (c) 2001 by Sun Microsystems, Inc.
-# All rights reserved.
+# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+# Use is subject to license terms.
 #
 #	cmd/rpcsvc/nis/rpc.nisd/configs/Makefile
 
-ETCDEFAULTFILES=	rpc.nisd
-VARNISFILES=		NIS+LDAPmapping.template
+DEFAULTFILES=	rpc.nisd.dfl
+VARNISFILES=	NIS+LDAPmapping.template
 
 include $(SRC)/cmd/Makefile.cmd
 
 ROOTVARNIS=		$(ROOT)/var/nis
 ROOTVARNISFILES=	$(VARNISFILES:%=$(ROOTVARNIS)/%)
-ROOTETCDEFAULTFILES=	$(ETCDEFAULTFILES:%=$(ROOTETC)/default/%)
 
 FILEMODE=	644
 OWNER=		root
 GROUP=		sys
 
-all: FRC
+all clean clobber lint:
 
-install: all $(ROOTDIRS) $(ROOTETCDEFAULTFILES) $(ROOTVARNISFILES)
-
-$(ROOTDIRS):
-	$(INS.dir)
-
-clean: FRC
-
-clobber: FRC
-
-lint: FRC
+install: all $(ROOTETCDEFAULTFILES) $(ROOTVARNISFILES)
 
 $(ROOTVARNIS)/NIS+LDAPmapping.template: NIS+LDAPmapping.template
 	$(INS.file) NIS+LDAPmapping.template
-
-$(ROOTETC)/default/rpc.nisd: rpc.nisd
-	$(INS.file) rpc.nisd
-
-FRC:
