6284427 enable disk power control on chicago

--- a/usr/src/uts/sun4u/chicago/io/ppm.conf
+++ b/usr/src/uts/sun4u/chicago/io/ppm.conf
@@ -80,8 +80,7 @@ name="ppm" parent="pseudo" instance=0;
 #	speeds=<integer>   - indicates the number of cpu speeds that are
 #			     supported
 
-ppm-domains="domain_cpu", "domain_diskfet1", "domain_diskfet2", "domain_diskfet3",
-    "domain_diskfet4", "domain_led", "domain_pciegfx";
+ppm-domains="domain_cpu", "domain_diskfet", "domain_led", "domain_pciegfx";
 
 #
 # 0x6a02 is JBPPMIOC_NEXT	(('j' << 8) | 2)
@@ -101,29 +100,11 @@ domain_cpu-control=
 # delay -- minimum delay between FET off and FET on
 # post_delay -- delay after turning on/off the FET
 #
-domain_diskfet1-devices = "/pci@1e,600000/pci@0/pci@a/pci@0/LSILogic,sas@0/sd@0,0";
-domain_diskfet1-model = "FET";
-domain_diskfet1-control =
-    "cmd=FET_ON path=/ebus@1f,464000/i2c@3,80/gpio@0,30:pca9556_0 method=I2CKIO iowr=0x4D82 iord=0x4D80 mask=0x01 val=0x01 post_delay=1500000",
-    "cmd=FET_OFF path=/ebus@1f,464000/i2c@3,80/gpio@0,30:pca9556_0 method=I2CKIO iowr=0x4D82 iord=0x4D80 mask=0x01 val=0";
-
-domain_diskfet2-devices = "/pci@1e,600000/pci@0/pci@a/pci@0/LSILogic,sas@0/sd@1,0";
-domain_diskfet2-model = "FET";
-domain_diskfet2-control =
-    "cmd=FET_ON path=/ebus@1f,464000/i2c@3,80/gpio@0,30:pca9556_0 method=I2CKIO iowr=0x4D82 iord=0x4D80 mask=0x02 val=0x02 post_delay=1500000",
-    "cmd=FET_OFF path=/ebus@1f,464000/i2c@3,80/gpio@0,30:pca9556_0 method=I2CKIO iowr=0x4D82 iord=0x4D80 mask=0x02 val=0";
-
-domain_diskfet3-devices = "/pci@1e,600000/pci@0/pci@a/pci@0/LSILogic,sas@0/sd@2,0";
-domain_diskfet3-model = "FET";
-domain_diskfet3-control =
-    "cmd=FET_ON path=/ebus@1f,464000/i2c@3,80/gpio@0,30:pca9556_0 method=I2CKIO iowr=0x4D82 iord=0x4D80 mask=0x04 val=0x04 post_delay=1500000",
-    "cmd=FET_OFF path=/ebus@1f,464000/i2c@3,80/gpio@0,30:pca9556_0 method=I2CKIO iowr=0x4D82 iord=0x4D80 mask=0x04 val=0";
-
-domain_diskfet4-devices = "/pci@1e,600000/pci@0/pci@a/pci@0/LSILogic,sas@0/sd@3,0";
-domain_diskfet4-model = "FET";
-domain_diskfet4-control =
-    "cmd=FET_ON path=/ebus@1f,464000/i2c@3,80/gpio@0,30:pca9556_0 method=I2CKIO iowr=0x4D82 iord=0x4D80 mask=0x08 val=0x08 post_delay=1500000",
-    "cmd=FET_OFF path=/ebus@1f,464000/i2c@3,80/gpio@0,30:pca9556_0 method=I2CKIO iowr=0x4D82 iord=0x4D80 mask=0x08 val=0";
+domain_diskfet-devices = "/pci@1e,600000/pci@0/pci@a/pci@0/LSILogic,sas@1";
+domain_diskfet-model = "FET";
+domain_diskfet-control =
+    "cmd=FET_ON path=/ebus@1f,464000/i2c@3,80/gpio@0,30:pca9556_0 method=I2CKIO iowr=0x4D82 iord=0x4D80 mask=0x0f val=0x0f post_delay=1500000",
+    "cmd=FET_OFF path=/ebus@1f,464000/i2c@3,80/gpio@0,30:pca9556_0 method=I2CKIO iowr=0x4D82 iord=0x4D80 mask=0x0f val=0";
 
 #
 # Manipulate the front-panel LED.  This platform uses ACTIVE low.
