6281099 prtfru on chicago doesn't show disk frus 6282831 SAS-BP and IOFB reported as FRU's instead of containers 6284996 chicago didn't shutdown or warn when front panel threshold was exceeded 6293610 Chicago P0.1/Fire 2.0 - "prtdiag -v" reports "Fan Status" failed 6293882 chicago picl plugin code needs cleanup

--- a/usr/src/cmd/picl/plugins/sun4u/chicago/frudata/libpiclfrudata.conf
+++ b/usr/src/cmd/picl/plugins/sun4u/chicago/frudata/libpiclfrudata.conf
@@ -56,12 +56,8 @@ PROP FRUDevicePath string r 0 "/devices/i2c@1f,520000/dimm-spd@0,ac:dimm-spd"
 name:/platform/i2c@1f,520000/dimm-spd@0,ae
 PROP FRUDevicePath string r 0 "/devices/i2c@1f,520000/dimm-spd@0,ae:dimm-spd"
 
-#
-# Access to the front-io-fru-prom through the PIC i2c bus is causing problems
-# currently. Temporarily disabled until the hw problem is resolved
-#
-# name:/platform/ebus@1f,464000/i2c@3,80/sas-backplane-fru-prom
-# PROP FRUDevicePath string r 0 "/devices/ebus@1f,464000/i2c@3,80/sas-backplane-fru-prom@0,a6:sas-backplane-fru-prom"
-# 
-# name:/platform/ebus@1f,464000/i2c@3,80/front-io-fru-prom
-# PROP FRUDevicePath string r 0 "/devices/ebus@1f,464000/i2c@3,80/front-io-fru-prom@0,a4:front-io-fru-prom"
+name:/platform/ebus@1f,464000/i2c@3,80/sas-backplane-fru-prom
+PROP FRUDevicePath string r 0 "/devices/ebus@1f,464000/i2c@3,80/sas-backplane-fru-prom@0,a6:sas-backplane-fru-prom"
+ 
+name:/platform/ebus@1f,464000/i2c@3,80/front-io-fru-prom
+PROP FRUDevicePath string r 0 "/devices/ebus@1f,464000/i2c@3,80/front-io-fru-prom@0,a4:front-io-fru-prom"
