--- a/usr/src/uts/intel/Makefile
+++ b/usr/src/uts/intel/Makefile
@@ -39,7 +39,8 @@ LINT_LIBS	= $(LINT_LIB) $(GEN_LINT_LIB) \
 
 # EXPORT DELETE START
 LINT_LIBS	+= $(SVVS_KMODS:%=$(LINT_LIB_DIR)/llib-l%.ln)
-LINT_XMODLIBS2	 = $(XMODS:adpu320=)
+LINT_XMODLIBS3	 = $(XMODS:lsimega=)
+LINT_XMODLIBS2	 = $(LINT_XMODLIBS3:adpu320=)
 LINT_XMODLIBS1	 = $(LINT_XMODLIBS2:e1000g=)
 LINT_XMODLIBS	 = $(LINT_XMODLIBS1:nge=)
 LINT_LIBS	+= $(LINT_XMODLIBS:%=$(LINT_LIB_DIR)/llib-l%.ln)
