6291360 usr/src/psm and usr/src/stand are no longer being linted 6293022 multiple inconsistent definitions of struct file_ident in ufsboot and the kernel

--- a/usr/src/Makefile.lint
+++ b/usr/src/Makefile.lint
@@ -344,7 +344,8 @@ COMMON_SUBDIRS = \
 	lib/pkcs11 \
 	lib/smartcard \
 	lib/fm \
-	lib/udapl
+	lib/udapl \
+	psm
 
 i386_SUBDIRS= \
 	cmd/biosdev \
@@ -362,7 +363,8 @@ sparc_SUBDIRS= \
 	cmd/wrsmconf \
 	cmd/wrsmstat \
 	lib/libwrsmconf \
-	lib/wrsm
+	lib/wrsm \
+	stand
 
 LINTSUBDIRS= $(COMMON_SUBDIRS) $($(MACH)_SUBDIRS)
 
